@@ -66,7 +66,12 @@ else
 			echo "<input type=hidden name=database value=".$_POST['database'].">";
 			echo "<input type=hidden name=newtablename value=".$_POST['newtablename'].">";
 			echo "<input type=hidden name=fieldnums value=".$_POST['fieldnums'].">";
+			//echo "<input type=hidden name=extenal value=".$_POST['extenal'].">";
 			echo "</table><br>";
+			if(@$_POST['extenal'] == 1)
+			{
+				echo $lang['extenalPath']."<input type=text name=extenal><br>".$lang['delimiter']."<input type=text name=delimiter>";
+			}
 			echo "<input type=submit name=submit value=".$lang['submit'].">";
 			echo "<input type=button name=cancel value=".$lang['cancel']." onclick=\"javascript:window.location='dbStructure.php?database=".$_POST['database']."'\">";
 			echo "</form>";
