@@ -45,6 +45,9 @@ $lang['loadData'] = "Load";
 $lang['local'] = "Local";
 $lang['hdfs'] = "HDFS";
 $lang['chooseFS'] = "Choose filesystem";
-$lang['pathToLoad'] = "Path to load";
-$lang['ifPartition'] = "Partition?";
+$lang['pathToLoad'] = "Path to load(full unix path to data)";
+$lang['ifPartition'] = "Partition? ex:(ds='2008-08-08')";
+$lang['ifExtenal'] = "If an extenal table?";
+$lang['extenalPath'] = "Extenal path ex:(hdfs:///data/datawash/www): ";
+$lang['delimiter'] = "Delimiter";
 ?>
